--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>我的第一個網頁</h1>
-    <button id="myButton">點我一下</button>
+    <button id="myButton">點我一下!!!</button>
 
     <script src="script.js"></script>
 </body>
