Load Version Test

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>簡單網頁範例</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>我的第一個網頁</h1>
-    <button id="myButton">點我一下!!!</button>
+    <button id="myButton">點!!!</button>
 
-    <script src="script.js"></script>
+    <!-- 由 loader.js 動態載入其他檔案 -->
+    <script src="loader.js"></script>
 </body>
 </html>
